Fixed layout of data sharing consent decline modal on mobile view

--- a/enterprise/static/enterprise/grant_data_sharing_permissions.css
+++ b/enterprise/static/enterprise/grant_data_sharing_permissions.css
@@ -187,10 +187,8 @@ h1 {
     transform: translate(-50%, -50%);
     background-color: #f5f5f5;
     margin: auto;
-    padding: 20px;
     width: 80%;
     max-width: 450px;
-    max-height: 300px;
     min-width: 300px;
     border-top: 30px solid #0075B4;
 }
@@ -200,12 +198,22 @@ h2#modal-header-text {
     font-size: 18px;
 }
 
+.modal-content .consent-confirmation-modal-scrollable {
+    max-height: calc(90vh - 30px); /* account for the height of the top bar with the close button */
+    overflow: auto;
+    padding: 20px;
+    width: 100%;
+}
+
 .data-consent-checkbox {
     float: left;
     margin-top: 4px;
     margin-right: 10px;
 }
 
+body.open-modal {
+    overflow: hidden;
+}
 
 /* Enterprise */
 .header {
